--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         });
         return document.createElement(cname);
     </component-script>
+    <components-quest-footer></components-quest-footer>
 </body>
 
 </html>
